--- a/DealershipAuto.GUI/Pages/ClientMenu.xaml
+++ b/DealershipAuto.GUI/Pages/ClientMenu.xaml
@@ -15,8 +15,8 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Content="Buy Car" HorizontalAlignment="Left" Height="79" Margin="422,128,0,0" VerticalAlignment="Top" Width="306"/>
-        <Button Content="Sell Car" HorizontalAlignment="Left" Height="79" Margin="422,236,0,0" VerticalAlignment="Top" Width="306"/>
+        <Button Content="Buy Car" HorizontalAlignment="Left" Height="79" Margin="422,128,0,0" VerticalAlignment="Top" Width="306" Click="Button_Click_1"/>
+        <Button Content="Sell Car" HorizontalAlignment="Left" Height="79" Margin="422,236,0,0" VerticalAlignment="Top" Width="306" Click="Button_Click_2"/>
         <Button Content="Main Menu" HorizontalAlignment="Left" Height="79" Margin="422,348,0,0" VerticalAlignment="Top" Width="306" Click="Button_Click"/>
 
     </Grid>
