--- a/DealershipAuto.GUI/Pages/BuySeries.xaml
+++ b/DealershipAuto.GUI/Pages/BuySeries.xaml
@@ -7,7 +7,7 @@
              d:DesignHeight="600" d:DesignWidth="800">
     <Grid Background="White">
         <Label Content="Cars:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="41" Width="164" FontSize="22"/>
-        <ListView HorizontalAlignment="Left" Margin="10,56,0,10" Width="348">
+        <ListView HorizontalAlignment="Left" Margin="10,56,0,10" Width="348" x:Name="CarList" SelectionChanged="CarList_SelectionChanged">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
@@ -24,7 +24,7 @@
             <Label Content="Engine: " HorizontalAlignment="Left" Margin="0,50,0,0" VerticalAlignment="Top"/>
             <Label Content="Engine" HorizontalAlignment="Left" Margin="45,50,0,0" VerticalAlignment="Top" x:Name="CarEngine" Width="66"/>
             <Label Content="Accesories: " HorizontalAlignment="Left" Margin="0,126,0,0" VerticalAlignment="Top"/>
-            <ListView Margin="0,157,0,78">
+            <ListView Margin="0,157,0,78" x:Name="CarAccesory">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn/>
