--- a/DealershipAuto.GUI/Windows/CarWindow.xaml
+++ b/DealershipAuto.GUI/Windows/CarWindow.xaml
@@ -15,7 +15,7 @@
         <Label Content="Engine: " HorizontalAlignment="Left" Margin="10,84,0,0" VerticalAlignment="Top"/>
         <Label Content="Engine" HorizontalAlignment="Left" Margin="67,84,0,0" VerticalAlignment="Top" x:Name="CarEngine" Width="66"/>
         <Label Content="Accesories: " HorizontalAlignment="Left" Margin="10,123,0,0" VerticalAlignment="Top"/>
-        <ListView Height="100" Margin="10,154,10,0" VerticalAlignment="Top">
+        <ListView Height="100" Margin="10,154,10,0" VerticalAlignment="Top" x:Name="CarAccesory">
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
