--- a/DealershipAuto.GUI/Pages/BuyCarMenu.xaml
+++ b/DealershipAuto.GUI/Pages/BuyCarMenu.xaml
@@ -5,8 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" Height="600" Width="800">
     <Grid>
-        <Button Content="Series" Margin="-13,-10,392,0" FontSize="48" Click="Button_Click"/>
-        <Button Content="Custome" Margin="402,-10,0,0" FontSize="48" Click="Button_Click_1"/>
+        <Button Content="Series" Margin="-13,-10,528,0" FontSize="48" Click="Button_Click"/>
+        <Button Content="Custome" Margin="272,-10,251,0" FontSize="48" Click="Button_Click_1"/>
+        <Button Content="Second" Margin="549,-10,0,0" FontSize="48" Click="Button_Click_2"/>
 
     </Grid>
 </UserControl>
